--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<header id="header">
 		<h1>Slice And Splice</h1>
+		<i class="fas fa-chevron-down"></i>
 		<div id="task" class="hidden">
 			<p id="task-head">Task</p>
 			<p id="task-details">You are given two arrays and an index. Use the array methods slice and splice to copy each element of the first array into the second array, in order. Begin inserting elements at index n of the second array. Return the resulting array. The input arrays should remain the same after the function runs.</p>
