Added default display values

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	</header>
 
 	<main id="main">
-		<p id="display-one" class="display">First Array: <span id="display-one-value" class="display-value"></span></p>
-		<p id="display-two" class="display">Second Array: <span id="display-two-value" class="display-value"></span></p>
-		<p id="display-index" class="display">Insertion Index: <span id="display-index-value" class="display-value"></span></p>
-		<p id="display-three" class="display-value">Result: <span id="display-three-value" class="display-value"></span></p>
+		<p id="display-one" class="display">First Array: <span id="display-one-value" class="display-value">???</span></p>
+		<p id="display-two" class="display">Second Array: <span id="display-two-value" class="display-value">???</span></p>
+		<p id="display-index" class="display">Insertion Index: <span id="display-index-value" class="display-value">???</span></p>
+		<p id="display-three" class="display-value">Result: <span id="display-three-value" class="display-value">???</span></p>
 		<p id="message" class="display">Edit JavaScript to test</p>
 	</main>
 
